--- a/templatedjango/apptemplate/templates/compras.html
+++ b/templatedjango/apptemplate/templates/compras.html
@@ -2,154 +2,204 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <title>Template</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static '/css/style.css' %}">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <title>Template</title>
+  {% load static %}
+  <link rel="stylesheet" href="{% static '/css/style.css' %}">
 </head>
 
 <body>
 
-    <div class="container">
-        <div class="form">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                    <h5 class="card-title"> <strong>Agregar Compras</strong> </h5>
-                    <form action="" method="POST">
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <label for="exampleFormControlSelect1">Categoria:</label>
-                            <select class="form-control" id="exampleFormControlSelect1" name="categoria">
-                                <option value="productos" >Productos</option>
-                                <option value="productos varios" >Productos Varios</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleFormControlSelect1">Nombre Producto:</label>
-                            <select class="form-control" id="exampleFormControlSelect1" name="nombre_producto">
-                                <option value="tunas del desierto" >Tunas del desierto</option>
-                                <option value="macetas" >Macetas</option>
-                                <option value="abono" >Abono</option>
-                                <option value="arena" >Arena</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Cantidad:</label>
-                            <input type="number" class="form-control" id="exampleInputPassword1" name="cantidad">
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Precio:</label>
-                            <input type="number" class="form-control" id="exampleInputPassword1" name="precio">
-                        </div>
-                        <button type="submit" class="btn btn-primary">Agregar</button>
-                    </form>
-                </div>
+  <div class="contenedor">
+    <div class="form">
+      <div class="card" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title"> <strong>Agregar Compras</strong> </h5>
+          <form action="" method="POST">
+            {% csrf_token %}
+
+            <!-- <div class="form-group">
+              <label for="exampleFormControlSelect1">Categoria:</label>
+              <select class="form-control" id="exampleFormControlSelect1" name="categoria">
+                {% for categorias in categoria  %}
+                <option id="opcion{{categorias.id}}" value="{{categorias.Nombre}}">{{categorias.Nombre}}</option>
+
+                {% endfor %}
+              </select>
+            </div> -->
+
+            <div class="form-group">
+              <label for="exampleFormControlSelect1">Nombre Producto:</label>
+              <select class="form-control" id="exampleFormControlSelect1" name="id_insumo">
+                {% for insumo in insumos  %}
+                <option id="opcion{{insumo.id}}" value="{{insumo.id}}">{{insumo.nombre}}</option>
+
+                {% endfor %}
+
+              </select>
             </div>
-        </div>
-        <div class="tabla">
-            <div class="card" style="width: fit-content;">
-                <div class="card-body">
-                    <h5 class="card-title">Compras</h5>
-                    <table class="table table-striped">
-                        <thead>
-                            <tr>
-                                <th scope="col">Categoria</th>
-                                <th scope="col">Producto</th>
-                                <th scope="col">Cantidad</th>
-                                <th scope="col">Precio Unitario</th>
-                                <th scope="col">Sub Total</th>
-                                <th scope="col">Acciones</th>
 
-                            </tr>
-                        </thead>
-                        <tbody>
-                            
-                            {% for compra in compras  %}
-                                
-                            <tr>
-                                <td>{{compra.id_insumo}}</td>
-                                <td>{{compra.cantidad}}</td>
-                                <td>{{compra.precio}}</td>
-                                <td>{{compra.subtotal}}</td>
+            <!-- <div class="form-group">
+              <label for="exampleFormControlSelect1">Unidad de Medida:</label>
+              <select class="form-control" id="exampleFormControlSelect1" name="unidad_medida">
+                <option value="kg">Kg</option>
+                <option value="Unidades">Unidades</option>
+              </select>
+            </div> -->
 
-                                <td style="color: black; text-align: left;">
-                                    {% load static %}
-                                    <i style="color: white;" type="button" data-toggle="modal"
-                                      data-target="#editar{{compra.id}}"><i><img src="{% static '/assets/icons/icon_edit.svg' %}" alt=""></i></i>
-                      
-                                    <div class="modal fade" id="editar{{compra.id}}" tabindex="-1" role="dialog"
-                                      aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                      <div class="modal-dialog" role="document">
-                                        <div class="modal-content">
-                                          <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Editar Datos</h5>
-                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                              <span aria-hidden="true">&times;</span>
-                                            </button>
-                                          </div>
-                                          <div class="modal-body">
-                                            <form method="POST" action="/editar">
-                                              {% csrf_token %}
-                                              <div class="form-group">
-                                                <label for="recipient-name" class="col-form-label">Nombre:</label>
-                                                <input name="nombre" value="{{user.nombre}}" type="text" class="form-control"
-                                                  id="recipient-name">
-                                              </div>
-                                              <div class="form-group">
-                                                <label for="recipient-name" class="col-form-label">Email:</label>
-                                                <input name="email" value="{{user.email}}" type="text" class="form-control"
-                                                  id="recipient-name">
-                                              </div>
-                                              <div class="form-group">
-                                                <label for="recipient-name" class="col-form-label">Numero de Telefono:</label>
-                                                <input name="numero" value="{{user.numero}}" type="text" class="form-control"
-                                                  id="recipient-name">
-                                              </div>
-                                              <div class="form-group">
-                                                <label for="message-text" class="col-form-label">Comentario:</label>
-                                                <textarea name="comentario" class="form-control"
-                                                  id="message-text">{{user.comentario}}</textarea>
-                                              </div>
-                                              <input type="hidden" name="iden" value="{{user.id}}">
-                                              <input type="hidden" name="admin" value="{{admin}}">
-                                          </div>
-                                          <div class="modal-footer">
-                                            <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
-                                            <button style="background-color: rgb(77, 231, 71); border: none;" type="submit"
-                                              class="btn btn-info">Guardar Cambios</button>
-                                          </div>
-                                          </form>
-                                        </div>
-                                      </div>
-                                    </div>
-                                  </td>
-                            </tr>
-                            {% endfor %}
-                                
-                        </tbody>
-                    </table>
-                </div>
-
-                <div class="totales">
-
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Total">
-                    </div>
-                    <div class="form-group">
-                        <input type="date" class="form-control" id="exampleInputPassword1" placeholder="Fecha">
-                    </div>
-                </div>
-
-                <div class="botones">
-                    <button type="submit" class="btn btn-primary">Registrar</button>
-                </div>
-                
+            <div class="form-group">
+              <label for="exampleInputPassword1">Cantidad:</label>
+              <input type="number" class="form-control" id="exampleInputPassword1" name="cantidad">
             </div>
+
+            <div class="form-group">
+              <label for="exampleInputPassword1">Precio:</label>
+              <input type="number" class="form-control" id="exampleInputPassword1" name="precio">
+            </div>
+
+            <button type="submit" class="btn btn-primary">Agregar</button>
+          </form>
         </div>
+      </div>
     </div>
+    <div class="tabla">
+      <div class="card" style="width: fit-content;">
+        <div class="card-body">
+          <h5 class="card-title">Compras</h5>
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col">Categoria</th>
+                <th scope="col">Producto</th>
+                <th scope="col">Unidad de Medida</th>
+                <th scope="col">Cantidad</th>
+                <th scope="col">Precio Unitario</th>
+                <th scope="col">Sub Total</th>
+                <th scope="col">Acciones</th>
+
+              </tr>
+            </thead>
+            <tbody>
+
+              {% for compra in compras  %}
+
+              <tr>
+                <td>{{compra.id_insumo}}</td>
+                <td>{{compra.unidad_de_medida}}</td>
+                <td>{{compra.cantidad}}</td>
+                <td>{{compra.precio}}</td>
+                <td>{{compra.subtotal}}</td>
+
+                <td style="color: black; text-align: left;">
+                  {% load static %}
+                  <i style="color: white;" type="button" data-toggle="modal" data-target="#editar{{compra.id}}"><i><img
+                        src="{% static '/assets/icons/icon_edit.svg' %}" alt=""></i></i>
+
+                  <div class="modal fade" id="editar{{compra.id}}" tabindex="-1" role="dialog"
+                    aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalLabel">Editar Datos</h5>
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                        </div>
+                        <div class="modal-body">
+                          <form method="POST" action="/editar">
+                            {% csrf_token %}
+                            <div class="form-group">
+                              <!-- <label for="message-text" class="col-form-label">Comentario:</label>
+                                                  <textarea name="comentario" class="form-control"
+                                                  id="message-text">{{user.comentario}}</textarea> -->
+
+                              <label for="turno{{categorias.id}}" class="col-form-label">Categoria:</label>
+                              <select name="turno" id="turno{{categorias.id}}" class="form-control">
+
+                                {% for categorias in categoria  %}
+                                <option id="opcion{{categorias.id}}" value="{{categorias.Nombre}}">{{categorias.Nombre}}
+                                </option>
+
+                                {% endfor %}
+
+
+                              </select>
+
+                              <!-- <script>
+                                                  var select = document.getElementById('opcion1{{user.id}}')
+                                                  var select2 = document.getElementById('opcion2{{user.id}}')
+                                                  select.setAttribute('selected', 'selected')
+                                                  select.innerHTML = '{{user.turno}}'
+                                                  select.value = '{{user.turno}}'
+                      
+                                                  var turno = select.value
+                      
+                                                  if (turno == 'mañana') {
+                                                    select2.value = 'tarde'
+                                                    select2.innerHTML = 'tarde'
+                                                    console.log('entro')
+                                                  } else {
+                                                    console.log('entro 2')
+                                                    select2.value = 'mañana'
+                                                    select2.innerHTML = 'mañana'
+                                                  }
+                                                </script> -->
+                            </div>
+                            <div class="form-group">
+                              <label for="recipient-name" class="col-form-label">Nombre del Producto:</label>
+                              <input name="email" value="{{user.email}}" type="text" class="form-control"
+                                id="recipient-name">
+                            </div>
+                            <div class="form-group">
+                              <label for="recipient-name" class="col-form-label">Cantidad:</label>
+                              <input name="numero" value="{{user.numero}}" type="text" class="form-control"
+                                id="recipient-name">
+                            </div>
+                            <div class="form-group">
+                              <label for="message-text" class="col-form-label">precio:</label>
+                              <textarea name="comentario" class="form-control"
+                                id="message-text">{{user.comentario}}</textarea>
+                            </div>
+                            <input type="hidden" name="iden" value="{{user.id}}">
+                            <input type="hidden" name="admin" value="{{admin}}">
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+                          <button style="background-color: rgb(77, 231, 71); border: none;" type="submit"
+                            class="btn btn-info">Guardar Cambios</button>
+                        </div>
+                        </form>
+                      </div>
+                    </div>
+                  </div>
+                </td>
+              </tr>
+              {% endfor %}
+
+            </tbody>
+          </table>
+        </div>
+
+        <div class="totales">
+
+          <div class="form-group">
+            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Total">
+          </div>
+          <div class="form-group">
+            <input type="date" class="form-control" id="exampleInputPassword1" placeholder="Fecha">
+          </div>
+        </div>
+
+        <div class="botones">
+          <button type="submit" class="btn btn-primary">Registrar</button>
+        </div>
+
+      </div>
+    </div>
+  </div>
 
 
 
@@ -164,15 +214,15 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
-    </script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
 
 </body>
 
