crud casi terminado

--- a/templatedjango/apptemplate/templates/compras.html
+++ b/templatedjango/apptemplate/templates/compras.html
@@ -18,7 +18,7 @@
       <div class="card" style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title"> <strong>Agregar Compras</strong> </h5>
-          <form action="" method="POST">
+          <form action="compras" method="POST">
             {% csrf_token %}
 
             <!-- <div class="form-group">
@@ -92,7 +92,7 @@
                 <td>{{compra.unidad_medida}}</td>
                 <td>{{compra.cantidad}}</td>
                 <td>{{compra.precio}}</td>
-                <td>{{compra.subtotal}}</td>
+                <td class="calcular_compra">{{compra.subtotal}}</td>
 
                 <td style="color: black; text-align: left;">
                   {% load static %}
@@ -121,8 +121,7 @@
                               <select name="producto" id="nombre{{insumo.id}}" class="form-control">
 
                                 {% for insumo in insumos  %}
-                                <option class="options{{compra.id_detalles_compras}}" id="opcion{{insumo.id}}"  value="{{insumo.nombre}}">{{insumo.nombre}}
-                                </option>
+                                <option class="productos{{compra.id_detalles_compras}}" id="opcion{{insumo.nombre}}"  value="{{insumo.id}}">{{insumo.nombre}}</option>
 
                                 {% endfor %}
 
@@ -130,19 +129,21 @@
                               </select>
 
                                                 <script>
-                                                  var elements = 0
-                                                  elements = document.getElementsByClassName('options{{compra.id_detalles_compras}}')
+                                                  
+                                                  var elements = document.getElementsByClassName('productos{{compra.id_detalles_compras}}')
                                                   var select = document.getElementById('select{{compra.id_detalles_compras}}')
 
-                                                  for (i =0; i < elements.length; i++)
+                                                  for (var i =0; i < elements.length; i++)
                                                   {
-                                                    if (elements[i].value == select.innerHTML)
+                                                    console.log(elements[i].innerHTML)
+                                                    if (elements[i].innerHTML == select.innerHTML)
                                                     {
-                                                      elements[i].setAttribute('selected','selected')
+                                                      elements[i].setAttribute('selected','selected');
+                                                      
                                                     }
                                                   }
-
-                                                  console.log(elements.length)
+                     
+                                                  console.log(select.innerHTML)
                                                 </script>
                             </div>
                             <div class="form-group">
@@ -179,15 +180,83 @@
         <div class="totales">
 
           <div class="form-group">
-            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Total">
+            <input type="text" class="form-control" id="total" placeholder="Total" readonly>
           </div>
           <div class="form-group">
-            <input type="date" class="form-control" id="exampleInputPassword1" placeholder="Fecha">
+            <input type="date" class="form-control" id="fecha_parcial">
           </div>
+
+          <script>
+
+          </script>
         </div>
 
         <div class="botones">
-          <button type="submit" class="btn btn-primary">Registrar</button>
+
+          <form action="registrar" method="post">
+            {% csrf_token %}
+            {% for conjunto_compras in compras  %}
+              <input type="hidden" name="id_para_compras" value="{{conjunto_compras.id_detalles_compras}}">
+            {% endfor %}
+              
+            <input type="hidden" id="fecha" name="fecha">
+            <input type="hidden" id="total_compra" name="total_compra">
+
+            <script>
+
+              // este codigo es para poder mostrar en tiempo real la cantidad total de la compra 
+
+              var calcular_total = document.getElementsByClassName('calcular_compra')
+              var suma = 0
+              for (i = 0; i < calcular_total.length; i ++ )
+              {
+                suma += parseInt(calcular_total[i].innerHTML,10);
+              }
+
+              total_compra = document.getElementById('total')
+              total_compra.innerHTML = suma;
+              total_compra.value = suma;
+
+              total_definido = document.getElementById('total_compra')
+              total_definido.value = suma
+
+              fecha = document.getElementById('fecha')
+
+              // el codigo de abajo es para poder poner la fecha por defecto en el input de tipo date
+
+              var today = new Date();
+              var dd = String(today.getDate()).padStart(2, '0');
+              var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
+              var yyyy = String(today.getFullYear());
+
+              date = String(yyyy + '-' + mm  + '-' + dd);
+              // document.write(today);
+              
+              
+              fecha_parcial = document.getElementById('fecha_parcial');
+
+              // fecha_utc = date.toUTCString()
+              fecha_parcial.value = date;
+              fecha_parcial.defaulValue = date;
+              fecha_parcial.innerHTML = date;
+
+
+              console.log(date)
+
+
+              // en esta funcion se cambia el vlor de la fecha al input oculto ara poer enviarlo al servidor
+              function cambio(){
+                fecha = document.getElementById('fecha')
+                fecha_parcial = document.getElementById('fecha_parcial');
+                fecha.value = fecha_parcial.value;
+
+              }
+
+              
+            </script>
+            <button type="submit" class="btn btn-primary" onclick="cambio()">Registrar</button>
+
+          </form>
         </div>
 
       </div>
