optimizacion de codigo en las vistas de compras con el objeto compra

--- a/templatedjango/apptemplate/templates/ver_compras.html
+++ b/templatedjango/apptemplate/templates/ver_compras.html
@@ -35,7 +35,7 @@
             
         {% else %}
             
-            <a href="ver_compras">Regresar</a>
+            <a href="compras">Regresar</a>
 
             {% for compra in compras  %}
         
